Changes to auto generate wg0.conf from environment variables

--- a/root/defaults/peer.conf
+++ b/root/defaults/peer.conf
@@ -1,11 +1,19 @@
 [Interface]
-Address = ${CLIENT_IP}
-PrivateKey = $(cat /config/${PEER_ID}/privatekey-${PEER_ID})
+Address = ${WIREGUARD_INTERFACE_IP}
+PrivateKey = ${WIREGUARD_INTERFACE_PRIVATE_KEY}
 ListenPort = 51820
-DNS = ${PEERDNS}
+DNS = 10.13.13.1
+
+# packet forwarding
+PreUp = sysctl -w net.ipv4.ip_forward=1
+
+# Send incoming HTTP traffic over WireGuard to the nginx proxy container
+PreUp = iptables -t nat -A PREROUTING -p tcp --dport 80 -j DNAT --to-destination 10.250.0.2:80
+PreUp = iptables -t nat -A POSTROUTING -j MASQUERADE
+PostDown = iptables -t nat -D PREROUTING -p tcp --dport 80 -j DNAT --to-destination 10.250.0.2
 
 [Peer]
-PublicKey = $(cat /config/server/publickey-server)
-PresharedKey = $(cat /config/${PEER_ID}/presharedkey-${PEER_ID})
-Endpoint = ${SERVERURL}:${SERVERPORT}
-AllowedIPs = ${ALLOWEDIPS}
+PublicKey = ${WIREGUARD_PEER_PUBLIC_KEY}
+PresharedKey = ${WIREGUARD_PEER_PRESHARED_KEY}
+Endpoint = ${WIREGUARD_PEER_ENDPOINT}
+AllowedIPs = 10.200.0.0/24,10.13.13.1
